@@ -6,6 +6,7 @@
 * Fixed menu navigation improved
 * Made the function lsx_to_archive_entry_top function test all active post types, not only the three core post types
 * Fixed (back-end) checkbox to display map on destination archive
+* Replaced body and post (TO post type) classes by same classes using prefix "lsx-to-POST_TYPE"
 
 ### 1.0.4
 * Removed the last of the LSX_TO_POSTEXPIRATOR_TYPES constants
